# textract2page

./: .gitignore  LICENSE  Makefile  NOTICE  README.md  README.rst  convert_aws.py  out.xml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: test.yml
ocr_test/Hofzuweisungslisten-AWS/OCR-D-IMG_Ansiedlung_Korotschin_UZS_Sign_22a_0000/: analyzeDocResponse.json  rawText.txt  table-1.csv
ocr_test/Hofzuweisungslisten-AWS/OCR-D-IMG_Ansiedlung_Korotschin_UZS_Sign_22a_0000/workspace/: mets.xml
ocr_test/Hofzuweisungslisten-AWS/OCR-D-IMG_Ansiedlung_Korotschin_UZS_Sign_22a_0000/workspace/OCR-D-SEG-PAGE/: OCR-D-IMG_Ansiedlung_Korotschin_UZS_Sign_22a_0000.xml
ocr_test/Hofzuweisungslisten-AWS/OCR-D-IMG_Ansiedlung_Korotschin_UZS_Sign_22a_0018/: rawText.txt  table-1.csv
ocr_test/Hofzuweisungslisten-AWS/OCR-D-IMG_Ansiedlung_Korotschin_UZS_Sign_22a_0018/workspace/: mets.xml
ocr_test/Hofzuweisungslisten-AWS/OCR-D-IMG_Ansiedlung_Korotschin_UZS_Sign_22a_0018/workspace/OCR-D-SEG-PAGE/: OCR-D-IMG_Ansiedlung_Korotschin_UZS_Sign_22a_0018.xml
ocr_test/Hofzuweisungslisten-AWS/OCR-D-IMG_Ansiedlung_WD_Wielun_LentschuÌtz_0002/: analyzeDocResponse.json  rawText.txt  table-1.csv
ocr_test/Hofzuweisungslisten-AWS/OCR-D-IMG_Ansiedlung_WD_Wielun_LentschuÌtz_0053/: rawText.txt  table-1.csv
ocr_test/Hofzuweisungslisten-AWS/OCR-D-IMG_Ansiedlung_WD_Wielun_LentschuÌtz_0053/workspace/: mets.xml
ocr_test/Hofzuweisungslisten-AWS/OCR-D-IMG_Ansiedlung_WD_Wielun_LentschuÌtz_0053/workspace/OCR-D-SEG-PAGE/: OCR-D-SEG-PAGE-Ansiedlung_WD_Wielun_Lentschütz_0053.xml
ocr_test/Hofzuweisungslisten-AWS/OCR-D-IMG_Evakuierung_von_Polen_Ansieldung_WD_Lask_0169/: analyzeDocResponse.json  rawText.txt  table-1.csv
ocr_test/Hofzuweisungslisten-AWS/OCR-D-IMG_Evakuierungen_und_Ansiedlungen_Schieratz_EUZ_Syg_30_0068/: analyzeDocResponse.json  rawText.txt  table-1.csv
ocr_test/Hofzuweisungslisten-AWS/OCR-D-IMG_Lodz_UZS_19_0030/: analyzeDocResponse.json  rawText.txt  table-1.csv
ocr_test/Hofzuweisungslisten-AWS/OCR-D-IMG_Lodz_UZS_19_0030/workspace/: mets.xml
ocr_test/Hofzuweisungslisten-AWS/OCR-D-IMG_Lodz_UZS_19_0030/workspace/OCR-D-SEG-PAGE/: OCR-D-SEG-PAGE_Lodz_UZS_19_0030.xml
ocr_test/Hofzuweisungslisten-AWS/OCR-D-IMG_Lodz_UZS_21_0150/: analyzeDocResponse.json  rawText.txt  table-1.csv
ocr_test/Hofzuweisungslisten-AWS/OCR-D-IMG_Lodz_UZS_25_0056/: analyzeDocResponse.json  rawText.txt  table-1.csv
ocr_test/Hofzuweisungslisten-AWS/OCR-D-IMG_Lodz_UZS_25_0056/workspace/: mets.xml
ocr_test/Hofzuweisungslisten-AWS/OCR-D-IMG_Lodz_UZS_25_0056/workspace/OCR-D-SEG-PAGE/: OCR-D-SEG-PAGE_Lodz_UZS_25_0056.xml
ocr_test/Hofzuweisungslisten-AWS/OCR-D-IMG_Lodz_UZS_28_0147/: analyzeDocResponse.json  keyValues.csv  rawText.txt  table-1.csv
ocr_test/Hofzuweisungslisten-AWS/OCR-D-IMG_Lodz_UZS_29_0027/: analyzeDocResponse.json  queryAnswers.csv  rawText.txt  signatures.csv  table-1.csv
ocr_test/OCR-D-SEG-PAGE/: out.xml
test/workspace/page/: 18xx-Missio-EMU-0042.xml
tests/: test_workspace.py
tests/workspace/: mets.xml
tests/workspace/page/: 18xx-Missio-EMU-0042.xml
tests/workspace/reference_page_xml/: 18xx-Missio-EMU-0042.xml  Ansiedlung_Korotschin_UZS_Sign_22a_0018.xml  Ansiedlung_WD_Wielun_Lentschütz_0053.xml  Lodz_UZS_25_0056.xml  nd1969-01-21_03.xml  nd1969-01-21_3.xml  nowa_doba.xml  sn1991-01-03_0001.xml  sn1991-02-09_pr_0002.xml
tests/workspace/textract/: 18xx-Missio-EMU.json
tests/workspace/textract_responses/: Ansiedlung_Korotschin_UZS_Sign_22a_0018.json  nd1969-01-21_3.json  nowa_doba.json  sn1991-01-03_0001.json  sn1991-02-09_pr_0002.json
textract2page/: __init__.py  cli.py  convert_aws.py  textract2page.py
textract2page/tests/: test_workspace.py
textract2page/tests/workspace/reference_page_xml/: 18xx-Missio-EMU-0042.xml  Ansiedlung_Korotschin_UZS_Sign_22a_0018.xml  Ansiedlung_WD_Wielun_Lentschütz_0053.xml  Lodz_UZS_25_0056.xml
textract2page/tests/workspace/textract_responses/: Ansiedlung_WD_Wielun_Lentschütz_0053.json
workspace/page/: 18xx-Missio-EMU-0042.xml
workspace/textract/: 18xx-Missio-EMU-0042.json
