[build-system]
requires = [
         "setuptools>=42",
         "setuptools_scm[toml]",
         "wheel",
]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[project]
name = "textract2page"
dynamic = ["authors", "classifiers", "dependencies", "description", "keywords", "license", "readme", "requires-python", "scripts", "version"]

[tool.setuptools_scm]
write_to = "textract2page/_version.py"
