[build-system]
requires = [
         "setuptools>=42",
         "setuptools_scm[toml]",
         "wheel",
]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[project]
name = "textract2page"
description = "Convert AWS Textract JSON to PRImA PAGE XML"
readme = "README.md"
authors = [
        {name = "Arne Rümmler"},
        {email = "arne.ruemmler@gmail.com"}
]
license = {text = "Apache Software License"}
keywords = ["OCR", "METS", "PAGE-XML", "AWS"]
classifiers = [
            "Programming Language :: Python :: 3",
            "Operating System :: OS Independent",
            "License :: OSI Approved :: Apache Software License",
            "Development Status :: 3 - Alpha",
            "Environment :: Console",
            "Intended Audience :: Developers",
            "Intended Audience :: Education",
            "Intended Audience :: Science/Research",
            "Topic :: File Formats",
            "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version", "dependencies"]
requires-python = ">=3.7"

[project.urls]
homepage = "https://github.com/slub/textract2page"

[project.scripts]
textract2page = "textract2page.cli:cli"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
write_to = "textract2page/_version.py"

[[tool.mypy.overrides]]
module = "PIL.*,ocrd_models.*,ocrd_utils.*,ocrd_modelfactory"
ignore_missing_imports = true
