[metadata]
name = textract2page
version = 0.1
description = Convert AWS Textract JSON to PRImA PAGE XML
author = Arne Rümmler
author_email = Arne.Ruemmler@slub-dresden.de
url = https://github.com/rue-a/convert_textract
long_description = file: README.md
long_description_content_type = text/markdown
keywords = OCR,METS,PAGE-XML,AWS
license = Apache Software License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Topic :: File Formats
    Topic :: Scientific/Engineering :: Image Recognition

[options]
python_requires = >=3.7
install_requires = file:requirements.txt
setup_requires = wheel
packages = find:
include_package_data = False

[options.packages.find]
include = textract2page*

[options.entry_points]
console_scripts =
    textract2page = textract2page.convert_aws:convert_file


[flake8]
ignore=E501
exclude=test/*.py

[PIL.*,ocrd_models.*,ocrd_utils.*,ocrd_modelfactory]
ignore_missing_imports = True

[codespell]
skip = ./test,./venv*,repo,build,.git,*.egg-info
count =
quiet-level = 3
