[metadata]
description = Convert AWS Textract JSON to PRImA PAGE XML
author = Arne Rümmler
author_email = arne.ruemmler@gmail.com
url = https://github.com/slub/textract2page
long_description = file: README.md
long_description_content_type = text/markdown
keywords = OCR,METS,PAGE-XML,AWS
license = Apache Software License
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Topic :: File Formats
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.7
install_requires = file:requirements.txt
setup_requires = wheel
packages = find:
include_package_data = False

[options.packages.find]
include = textract2page*

[options.entry_points]
console_scripts =
    textract2page = textract2page.cli:cli


[flake8]
ignore=E501
exclude=tests/*.py

[PIL.*,ocrd_models.*,ocrd_utils.*,ocrd_modelfactory]
ignore_missing_imports = True

[codespell]
skip = ./tests,./venv*,repo,build,.git,*.egg-info
count =
quiet-level = 3
